Fixed ant tasks to generate updates for database schemas