@@ -106,13 +106,13 @@
         <echo message="SQL Executed on data base..." />
     </target>
 	
-	<target name="build-sql">
+	<target name="build-create-sql">
         <!--
             You will need to run a mvn install on your project before attempting to execute this task.
             Also, you will likely need to assign additional heap space to your ANT process. A setting
             of -XX:MaxPermSize=256M -Xmx512M should be sufficient.
         -->
-        <mkdir dir="target/sql"/>
+        <mkdir dir="target/sql/create"/>
         <artifact:pom id="myPom" file="pom.xml" />
         <artifact:dependencies filesetId="pomDeps" pomRefId="myPom" useScope="compile" />
         <property name="baseTarget" location="target/${myPom.build.finalName}/WEB-INF"/>
@@ -140,8 +140,8 @@
         </path>
         <!--If the war project does not contain custom entities (best practice), then it is not necessary to include application context from the WEB-INF directory-->
         <!--<property name="my.app.context" location="src/main/webapp/WEB-INF/applicationContext.xml"/>-->
-        <taskdef name="hibernatetool" classname="org.broadleafcommerce.common.util.sql.HibernateToolTask" classpathref="build.runtime.classpath" />
-        <hibernatetool destDir="target/sql" combinePersistenceUnits="false" refineFileNames="true">
+        <taskdef name="hibernatetool" classname="org.broadleafcommerce.common.util.sql.HibernateToolTask" classpathref="build.runtime.classpath"/>
+        <hibernatetool destDir="target/sql/create" combinePersistenceUnits="false" refineFileNames="true">
             <!--add in additional persistence configuration related to the framework -->
             <classPathApplicationContext path="bl-framework-applicationContext-persistence.xml"/>
         	<!--add in additional persistence configuration related to common -->
@@ -163,7 +163,80 @@
             <jpaconfiguration persistenceUnit="blCMSStorage" dialect="${ant.hibernate.sql.ddl.dialect}" />
             <!--other required elements-->
             <classpath refid="build.runtime.classpath" />
-        	<hbm2ddl export="false"/>
+        	<hbm2ddl export="false" update="false" create="true"/>
         </hibernatetool>
     </target>
+	
+	<target name="build-update-sql">
+	        <!--
+	            You will need to run a mvn install on your project before attempting to execute this task.
+	            Also, you will likely need to assign additional heap space to your ANT process. A setting
+	            of -XX:MaxPermSize=256M -Xmx512M should be sufficient.
+	        -->
+	        <mkdir dir="target/sql/update"/>
+	        <artifact:pom id="myPom" file="pom.xml" />
+	        <artifact:dependencies filesetId="pomDeps" pomRefId="myPom" useScope="compile" />
+	        <property name="baseTarget" location="target/${myPom.build.finalName}/WEB-INF"/>
+	        <fileset id="libDir" dir="${baseTarget}/lib"/>
+			<path id="build.runtime.classpath">
+	            <!--There are some additional libraries needed at compile time that are not included
+	                in WEB-INF/lib - find those libraries via a difference algorithm-->
+	            <restrict>
+	                <difference>
+	                    <fileset refid="pomDeps" />
+	                    <intersect>
+	                        <fileset refid="pomDeps" />
+	                        <fileset refid="libDir" />
+	                    </intersect>
+	                </difference>
+	                <rsel:not>
+	                    <rsel:name name="**/*.pom" />
+	                </rsel:not>
+	            </restrict>
+	            <!--Add the lib directory to get all the dependencies required for the demo app-->
+	            <fileset refid="libDir"/>
+				<dirset dir="src/main/resources" />
+	        	<!--Add the classes directory in the war project, if required-->
+	            <!--<pathelement location="${baseTarget}/classes"/>-->
+	        </path>
+	        <!--If the war project does not contain custom entities (best practice), then it is not necessary to include application context from the WEB-INF directory-->
+	        <!--<property name="my.app.context" location="src/main/webapp/WEB-INF/applicationContext.xml"/>-->
+	        <taskdef name="hibernatetool" classname="org.broadleafcommerce.common.util.sql.HibernateToolTask" classpathref="build.runtime.classpath" />
+	        <hibernatetool destDir="target/sql/update" combinePersistenceUnits="false" refineFileNames="true">
+	            <!--add in additional persistence configuration related to the framework -->
+	            <classPathApplicationContext path="bl-framework-applicationContext-persistence.xml"/>
+	        	<!--add in additional persistence configuration related to common -->
+	        	<classPathApplicationContext path="bl-common-applicationContext-persistence.xml"/>
+	        	<classPathApplicationContext path="bl-fake-applicationContext-ant.xml"/>
+	        	<!--add in additional persistence configuration related to the cms -->
+	            <classPathApplicationContext path="bl-cms-contentClient-applicationContext.xml"/>
+	        	<classPathApplicationContext path="bl-cms-contentCreator-applicationContext.xml"/>
+	        	<classPathApplicationContext path="bl-open-admin-contentClient-applicationContext.xml"/>
+	        	<!--add in additional persistence configuration related to the profile -->
+	        	<classPathApplicationContext path="bl-profile-applicationContext-persistence.xml"/>
+	        	<!--add in additional persistence configuration for our core -->
+	            <classPathApplicationContext path="applicationContext.xml"/>
+	        	<!--see description for my.app.context above -->
+	            <fileSystemApplicationContext path="src/main/webapp/WEB-INF/applicationContext.xml"/>
+	        	<!--select the dialects and persistence units to export-->
+	            <jpaconfiguration persistenceUnit="blPU" dialect="${ant.hibernate.sql.ddl.dialect}" 
+	            	url="${blPU.url}" 
+	            	userName="${blPU.userName}" 
+	            	password="${blPU.password}" 
+	            	driverClassName="${blPU.driverClassName}"/>
+	            <jpaconfiguration persistenceUnit="blSecurePU" dialect="${ant.hibernate.sql.ddl.dialect}" 
+	            	url="${blSecurePU.url}" 
+	            	userName="${blSecurePU.userName}" 
+	            	password="${blSecurePU.password}" 
+	            	driverClassName="${blSecurePU.driverClassName}"/>
+	            <jpaconfiguration persistenceUnit="blCMSStorage" dialect="${ant.hibernate.sql.ddl.dialect}" 
+	            	url="${blCMSStorage.url}" 
+	            	userName="${blCMSStorage.userName}" 
+	            	password="${blCMSStorage.password}" 
+	            	driverClassName="${blCMSStorage.driverClassName}"/>
+	            <!--other required elements-->
+	            <classpath refid="build.runtime.classpath" />
+	        	<hbm2ddl export="false" update="true" create="false"/>
+	        </hibernatetool>
+	    </target>
 </project>
